<resources>
    <string name="app_name">Family safety</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="in_case_of_emergency_keep_telling_family_members_to_contact_me">In case of emergency, keep telling family members to contact me</string>
    <string name="guard">GUARD</string>
    <string name="open_when_you_are_on_a_potentially_dangerous_journey_prioritize_safety">Open when you are on a potentially dangerous journey, prioritize safety!</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="nav_guard">nav_guard</string>
    <string name="profile">Profile</string>
    <string name="Guard">Guard</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homes">Home</string>
    <string name="your_profile">Your Profile</string>
    <string name="apoorv_yash">Apoorv Yash</string>
</resources>