<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dim_16"
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#f0737b"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/title">


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dim_16"
        android:text="@string/sos"
        android:textColor="#FFF"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_kitty"
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dim_16"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />
    <ImageView
        android:contentDescription="@string/sos"
        android:id="@+id/sos_kitty"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        android:elevation="24dp"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        android:src="@drawable/sos_kitty"
        android:layout_width="130dp"
        android:layout_height="130dp"
        />
    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dim_16"
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#63d2c8"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card">


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dim_16"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />
    <ImageView
        android:contentDescription="@string/guard"
        android:id="@+id/save_kitten"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        android:elevation="24dp"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        android:src="@drawable/save_kitty"
        android:layout_width="130dp"
        android:layout_height="130dp"
        />

    <TextView
        android:id="@+id/guard_msg"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/sos_kitty"
        android:layout_margin="@dimen/dim_16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dim_16"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey_prioritize_safety"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />


</androidx.constraintlayout.widget.ConstraintLayout>
